# raytracer

./: CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README-template.md  README.md  SECURITY.md  clippy.toml  notes.md  rust-toolchain.toml  rustfmt.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: rust-ci.yml
assets/: output.txt
examples/: 01_projectile.rs  02_projectile.rs  ch01_projectile.rs  ch02_projectile.rs  projectile.rs
output/: ch01_projectile.txt
scripts/: bump-toolchain.sh
src/: error.rs  lib.rs  math.rs  mathf.rs  prelude.rs  primitives.rs  tuple.rs
src/cmp/: epsilon.rs  float.rs  mod.rs
src/graphics/: canvas.rs
src/math/: approx.rs  constants.rs  epsilon.rs  equality.rs  mod.rs
src/math/primitives/: color.rs  components.rs  mod.rs  point.rs  tuple.rs  vector.rs
src/primitives/: color.rs  macros.rs  matrix.rs  mod.rs  point.rs  tuple.rs  vector.rs
tests/: cucumber.rs  world.rs
tests/features/: csg.feature  cubes.feature  cylinders.feature  groups.feature  intersections.feature  matrices.feature  obj_file.feature  shapes.feature  tuples.feature  world.feature
tests/steps/: canvas.rs  matrix.rs  mod.rs  tuple.rs
tests/support/: helpers.rs  mod.rs  world.rs
tests/support/helpers/: matrix.rs  mod.rs  tuple.rs
