[package]
  name = "raytracer"
  description = "A ray tracing library based on the book 'The Ray Tracer Challenge' by Jamis Buck."
    homepage = "https://github.com/princemuel/raytracer"
  repository = "https://github.com/princemuel/raytracer"
  version = "0.1.0"
  edition = "2024"
  license = "MIT"

[dependencies]
  # float-cmp  = "0.10"

[dev-dependencies]
  cucumber = "0.21"
  # derive_more = { version = "2", features = ["full"] }
  tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

[[test]]
  name = "cucumber" # this should be the same as the filename of your test target
  harness = false  # Allows Cucumber to print output instead of libtest
